DSND-2870: Improve logging and published_at timestamp format (#6)
* DSND-2870: Improve logging and published at timestamp format

* Adds thread local log map to each log message.
* Uses the standardised published_at timestamp format.
* Adds integration test for healthcheck.
* Fixes code smells.

* DSND-2870: Add spring logging